--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ html {
   --black: #222;
   --white: #fff;
   --red-light: #f8d7da;
-  --red-dark: #842029;
+  --red-dark: #7a1d25;
   --green-light: #d1e7dd;
   --blue-clr: #3765ff;
   --purple-clr: #270252;
@@ -173,6 +173,7 @@ ul {
 .btn-danger {
   background: var(--red-light);
   color: var(--red-dark);
+  margin-right: .3rem;
 }
 .btn-danger:hover {
   background: var(--red-dark);
