--- a/src/index.css
+++ b/src/index.css
@@ -140,8 +140,8 @@ ul {
 .btn {
   cursor: pointer;
   color: var(--white);
-  background: var(--light-purple);
-  border: transparent;
+  background: var(--light-purple); 
+  border: none;
   border-radius: var(--borderRadius);
   letter-spacing: var(--letterSpacing);
   padding: 0.375rem 0.75rem;
@@ -152,7 +152,7 @@ ul {
   font-size: 1rem;
 }
 .btn:hover {
-  background: var(--dark-purple);
+  background: #150e28;
   box-shadow: var(--shadow-3);
 }
 .btn-hipster {
