--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ html {
   --dark-text: #9198f8;
 
   /* rest of the colors */
-  --grey-200: #7e8083;
-  --black: #222;
+  --grey-200: #7e7a7a;
+  --black: #686666;
   --white: #fff;
   --red-light: #f8d7da;
   --red-dark: #7a1d25;
